argocd/media/jellyfin/jellyfin.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: plex
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyfin
  replicas: 1
  template:
    metadata:
      labels:
        app: jellyfin
      annotations:
        backup.velero.io/backup-volumes-excludes: media,transcodes
    spec:
      containers:
      - name: jellyfin
        image: jellyfin/jellyfin:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8096
          name: http-web-svc
        volumeMounts:
        - mountPath: "/config"
          name: config
        - mountPath: "/media"
          name: media
        - mountPath: "/transcodes"
          name: transcodes
        # Quicksync
        - name: "render-device"
          mountPath: "/dev/dri/renderD128"
        securityContext:
            privileged: true
        livenessProbe:
          httpGet:
            path: /web/index.html
            port: 8096
          failureThreshold: 5
          initialDelaySeconds: 10
          periodSeconds: 30
          timeoutSeconds: 10
        resources:
          requests:
            memory: "0"
          limits:
            memory: "1.5Gi"
          limits:
            ephemeral-storage: "1Gi"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: gpu-node
                operator: In
                values:
                - "true"
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: jellyfin-config-pvc
      - name: media
        persistentVolumeClaim:
          claimName: media2-pvc
      - name: transcodes
        emptyDir: {}
      # Quicksync
      - name: "render-device"
        hostPath:
          path: "/dev/dri/renderD128"
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-service
  namespace: plex
spec:
  selector:
    app: jellyfin
  type: ClusterIP
  ports:
  - name: jellyfin-web-port
    protocol: TCP
    port: 8096
    targetPort: http-web-svc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: plex
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: jellyfin.jibby.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin-service
                port:
                  number: 8096
